# examples

./: .gitignore  README.md
solana-cpi/: Anchor.toml
solana-cpi/programs/solana-cpi/: Cargo.toml
solana-cpi/programs/solana-cpi/src/: instructions.rs  lib.rs
solana-cpi/programs/solana-cpi/src/instructions/: mint_with_identity_depository_cpi.rs  redeem_from_identity_depository_cpi.rs
